# Pigeon-Code-Compiler

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: WHAT_IS_SEMANTIC_FILE_NAMING.md
hooks/: post-commit
pigeon_rename/: __init__.py  __main__.py  cli.py  compliance.py  executor.py  glyph.py  heal.py  import_rewriter.py  limits.py  manifest_builder.py  nametag.py  planner.py  registry.py  scanner.py  split.py  validator.py
tests/: test_rename.py
