[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pigeon-code-compilor"
version = "0.1.0"
description = "Pigeon Protocol for source code. Semantic structure, mutation tracking, and drift detection for Python codebases. By MyAIFingerprint."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "MyAIFingerprint"}
]
keywords = [
    "python", "semantic-code", "pigeon-protocol", "mutation-tracking",
    "drift-detection", "code-identity", "manifest", "refactoring",
    "code-quality", "myaifingerprint", "ai-readable", "llm-context",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://myaifingerprint.com"
Repository = "https://github.com/myaifingerprint/pigeon-code-compilor"
Issues = "https://github.com/myaifingerprint/pigeon-code-compilor/issues"

[project.scripts]
pigeon = "pigeon_rename.cli:main"

[tool.setuptools.packages.find]
include = ["pigeon_rename*"]
